--------------------------------------------------------------------------------------------------
Release notes version 1.8.4_beta : Enhancements, modifications and corrected bugs since version 1.8.3 :
--------------------------------------------------------------------------------------------------
20/07/21 (TRUST)  Performance : Output files (.out) are opened/closed at the first/last print and not at each print as before
12/07/21 (TRUST)  Bug fix     : Source_generique source term couldn't be used for PolyMAC discretization
XX/XX/21 (TRUST)  Performance : A same advanced field used by several probes are now computed only once during each post-processing phasis 
05/07/21 (TRUST)  Portability : New CCRT cluster topaze supported (110592 AMD Milan Epyc cores)
--------------------------------------------------------------------------------------------------
Release notes version 1.8.3 : Enhancements, modifications and corrected bugs since version 1.8.2 :
--------------------------------------------------------------------------------------------------
15/06/21 (TRUST)  New feature : Python package added which offers the user a possibility to perform time/space statistical post-processing of the son files (convergence, correlation, spectra ...). See validation file HowTo/Postreatment_stats
15/06/21 (TRUST)  New feature : Python package added which allows writing and running prm validation files via jupyter-lab using python & markdown syntax
11/06/21 (TRUST)  Change      : If some conda packages are updated/added/removed after TRUST install, configuring TRUST again will detect that and re-install TRUST's conda packages as per default.
07/06/21 (TRUST)  Bug fixed   : Finite Element (EF) BTD or SUPG convection scheme were unavailable in Pb_Thermohydraulique 
03/06/21 (TRUST)  New feature : Source term "Canal_perio" now supported in VDF for the Conduction_Diffusion_* equation